--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.hidden {
+    opacity: 0;
+    transition: opacity 1s ease-in;
+}
+
+.show {
+    opacity: 1;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -187,8 +196,6 @@ nav button {
     text-align: center;
     font-size: 48px;
     font-weight: 900;
-    max-width: 46vw;
-    margin: auto;
 }
 
 .faqbox {
@@ -200,14 +207,87 @@ nav button {
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    font-size: 24px;
 }
 
 .faqbox:hover {
     background: #414141;
 }
 
+.answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #2d2d2d;
+    color: #fff;
+    padding: 0 24px;
+}
+
 .faqbox svg {
-    stroke: white;
+    filter: invert(1);
+    transition: transform 0.3s ease;
+}
+
+.faqbox:hover svg {
+    transform: rotate(45deg);
+}
+
+footer {
+    color: #fff;
+    max-width: 60vw;
+    margin: auto;
+    padding: 60px 0;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: #fff;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
+}
+
+.footer a {
+    font-size: 14px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.questions {
+    padding: 20px 0;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 
@@ -229,14 +309,13 @@ nav button {
   }
 
   .hero-buttons {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
   }
 
   .main input {
-    width: auto;
-    flex-grow: 1;
+    width: 80vw;
   }
 
   .btn-red {
@@ -260,34 +339,22 @@ nav button {
     font-size: 18px;
   }
 
-  .faq {
-    width: 90vw;
-    margin: auto;
-  }
-
   .faq h2 {
-    max-width: 90vw;
+    font-size: 32px;
   }
 
   .faqbox {
-    max-width: 80vw;
-    padding: 15px;
-    flex-wrap: wrap;
-    justify-content: center;
-    text-align: center;
-  }
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
-  .faqbox span {
-    width: 100%;
-    text-align: center;
-    font-size: 18px; /* Reduced font size */
-  }
-
-  .faqbox svg {
-    display: block;
-    margin-top: 10px;
-  }
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
 
   
 }
+
 
